--- a/failure.html
+++ b/failure.html
@@ -5,12 +5,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>failure</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<style type="text/css">
+		.lead{
+			font-size: 30px;
+			
+		}
+		.jumbotron{
+			background-color: #D3D3D3;
+
+		}
+		.container{
+			padding-top: 30px;
+		}
+		.display-4{
+			font-size: 100px;
+			font-weight: 400;
+		}
+		button{
+			margin-bottom: 60px;
+		}
+	</style>
 </head>
 <body>
 	<div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Uh Oh!</h1>
-    <p class="lead">there was a problem signing u up</p>
+    <p class="lead">There was a problem signing you up 😥</p>
 
   
 <form action="/failure" method="post">
