--- a/success.html
+++ b/success.html
@@ -5,12 +5,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>success</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<style type="text/css">
+		.lead{
+			font-size: 30px;
+			padding-bottom: 60px;
+		}
+		.jumbotron{
+			background-color: #D3D3D3;
+
+		}
+		.container{
+			padding-top: 30px;
+		}
+		.display-4{
+			font-size: 100px;
+			font-weight: 400;
+		}
+	</style>
 </head>
 <body>
 	<div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Awesome</h1>
-    <p class="lead">U have successfully signed up!</p>
+    <h1 class="display-4"  >Awesome!</h1>
+    <p class="lead">You have successfully signed up! ✌️✌️✌️</p>
   </div>
 </div>
 
